Gradle, commands, jdk update